[gd_scene load_steps=2 format=2]

[ext_resource path="res://Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SoundSlider" type="HSlider" parent="."]
margin_right = 219.0
margin_bottom = 16.0
min_value = -45.0
max_value = 15.0
value = -5.0

[node name="MusicSlider" type="HSlider" parent="."]
margin_right = 219.0
margin_bottom = 16.0
min_value = -45.0
max_value = 15.0
value = -5.0

[connection signal="value_changed" from="SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
